tests: add a test case for noise-hurl

--- a/tests/compositions/Makefile.am
+++ b/tests/compositions/Makefile.am
@@ -30,6 +30,7 @@ TESTS = \
   hdr-color.xml                   \
   image-compare.xml               \
   mantiuk06.xml                   \
+  noise-hurl.xml        	  \
   pixelize.xml                    \
   posterize.xml                   \
   red-eye-removal.xml             \
