Clean up last commit

--- a/gegl/Makefile.am
+++ b/gegl/Makefile.am
@@ -154,7 +154,7 @@ CLEANFILES += $(vapi_DATA)
 
 endif # HAVE_VALA
 
-EXTRA_DIST = gegl-@GEGL_API_VERSION@.deps
+EXTRA_DIST += gegl-@GEGL_API_VERSION@.deps
 
 endif # HAVE_INTROSPECTION
 
