Removed wildcard rules from operations Makefiles
The custom rules prevented automake's dependency tracking from
working, which was generally annoying and made using opencl/*.cl.h
much more painful than necessary.

--- a/operations/common/Makefile.am
+++ b/operations/common/Makefile.am
@@ -1,7 +1,116 @@
 SUBDIRS = perlin
 
-include $(top_srcdir)/operations/Makefile-operations.am
+include $(top_srcdir)/operations/Makefile-common.am
 
-AM_CPPFLAGS += \
-	-I$(top_srcdir) \
-	-I$(top_srcdir)/operations/common
+EXTRA_DIST = $(wildcard $(srcdir)/*.h)
+
+AM_CPPFLAGS += -I$(srcdir)
+
+LIBS = $(op_libs)
+
+opdir = $(ext_dir)
+op_LTLIBRARIES = \
+	alien-map.la \
+	antialias.la \
+	bilateral-filter-fast.la \
+	bilateral-filter.la \
+	box-blur.la \
+	brightness-contrast.la \
+	buffer-sink.la \
+	buffer-source.la \
+	bump-map.la \
+	c2g.la \
+	cartoon.la \
+	channel-mixer.la \
+	checkerboard.la \
+	color-reduction.la \
+	color-temperature.la \
+	color-to-alpha.la \
+	color.la \
+	contrast-curve.la \
+	cubism.la \
+	deinterlace.la \
+	difference-of-gaussians.la \
+	display.la \
+	dropshadow.la \
+	edge-laplace.la \
+	edge-sobel.la \
+	emboss.la \
+	exp-combine.la \
+	exposure.la \
+	fattal02.la \
+	fractal-explorer.la \
+	fractal-trace.la \
+	gaussian-blur.la \
+	gegl-buffer-load-op.la \
+	gegl-buffer-save-op.la \
+	grey.la \
+	grid.la \
+	high-pass.la \
+	image-compare.la \
+	introspect.la \
+	invert-gamma.la \
+	invert-linear.la \
+	layer.la \
+	lens-distortion.la \
+	levels.la \
+	load.la \
+	magick-load.la \
+	mantiuk06.la \
+	map-absolute.la \
+	map-relative.la \
+	matting-global.la \
+	mblur.la \
+	mirrors.la \
+	mono-mixer.la \
+	mosaic.la \
+	motion-blur-circular.la \
+	motion-blur-linear.la \
+	motion-blur-zoom.la \
+	noise-cie-lch.la \
+	noise-hsv.la \
+	noise-hurl.la \
+	noise-pick.la \
+	noise-reduction.la \
+	noise-rgb.la \
+	noise-slur.la \
+	noise-spread.la \
+	noise.la \
+	oilify.la \
+	opacity.la \
+	open-buffer.la \
+	over.la \
+	photocopy.la \
+	pixelize.la \
+	plasma.la \
+	polar-coordinates.la \
+	posterize.la \
+	raw-load.la \
+	rectangle.la \
+	red-eye-removal.la \
+	reinhard05.la \
+	remap.la \
+	ripple.la \
+	save.la \
+	shift.la \
+	snn-mean.la \
+	softglow.la \
+	stress.la \
+	stretch-contrast-hsv.la \
+	stretch-contrast.la \
+	svg-huerotate.la \
+	svg-luminancetoalpha.la \
+	svg-matrix.la \
+	svg-saturate.la \
+	threshold.la \
+	tile-seamless.la \
+	tile.la \
+	unsharp-mask.la \
+	value-invert.la \
+	vignette.la \
+	warp.la \
+	waves.la \
+	weighted-blend.la \
+	whirl-pinch.la \
+	wind.la \
+	write-buffer.la
