--- a/operations/Makefile-common.am
+++ b/operations/Makefile-common.am
@@ -2,13 +2,9 @@ if PLATFORM_WIN32
 no_undefined = -no-undefined
 endif
 
-libgegl = $(top_builddir)/gegl/libgegl-$(GEGL_API_VERSION).la $(BABL_LIBS)
+libgegl = $(top_builddir)/gegl/libgegl-$(GEGL_API_VERSION).la
 
-op_libs = $(DEP_LIBS) $(libgegl)
-
-GEGLHEADERS     = $(wildcard $(top_srcdir)/gegl/*.h)\
-                  $(wildcard $(top_srcdir)/gegl/buffer/*.h)\
-                  $(wildcard $(top_srcdir)/gegl/opencl/*.h)
+op_libs = $(DEP_LIBS) $(BABL_LIBS) $(libgegl)
 
 AM_CPPFLAGS = \
 	-I$(top_srcdir) \
