Move gegl.h declarations into their own headers.
gegl-init.c -> gegl-init.h
gegl-apply.c -> gegl-apply.h
gegl-processor.c -> process/gegl-processor.h
gegl-c.c -> gegl-c.h
gegl-node.c -> graph/gegl-node.h
misc -> gegl-operations-util.h

gegl-c.h is intentionally left out of the documentation
list because it contains only deprecated functions.

The functions in gegl-operations-util.h are still duplicate
definitions, but moving them to another file for now is
necessary to fix the ordering of the documentation html files.

There is a guard against directly including gegl-operations-util.h
because its future is uncertain and it shouldn't be included
directly even in internal code.

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -179,6 +179,10 @@ endif
 
 API_DOC_FILES = \
 	$(top_srcdir)/gegl/gegl.h			\
+	$(top_srcdir)/gegl/gegl-init.h		\
+	$(top_srcdir)/gegl/gegl-operations-util.h	\
+	$(top_srcdir)/gegl/graph/gegl-node.h		\
+	$(top_srcdir)/gegl/process/gegl-processor.h	\
 	$(top_builddir)/gegl/gegl-version.h		\
 	$(top_srcdir)/gegl/buffer/gegl-buffer.h		\
 	$(top_srcdir)/gegl/buffer/gegl-buffer-iterator.h\
@@ -187,7 +191,8 @@ API_DOC_FILES = \
 	$(top_srcdir)/gegl/property-types/gegl-color.h	\
 	$(top_srcdir)/gegl/gegl-matrix.h 		\
 	$(top_srcdir)/gegl/property-types/gegl-path.h	\
-	$(top_srcdir)/gegl/property-types/gegl-curve.h
+	$(top_srcdir)/gegl/property-types/gegl-curve.h \
+	$(top_srcdir)/gegl/gegl-apply.h
 
 api.html: $(API_DOC_FILES) \
 	  $(top_srcdir)/tools/create-reference.rb
