seamless-clone: Link against babl again
Necessary since 0df497a1afdde4bd28d0f99873757c0ce3490a80 moved
$(BABL_LIBS) out of $(libgegl)

--- a/seamless-clone/Makefile.am
+++ b/seamless-clone/Makefile.am
@@ -32,7 +32,7 @@ libgegl_sc_@GEGL_API_VERSION@_la_CFLAGS = \
 lib_LTLIBRARIES = libgegl-sc-@GEGL_API_VERSION@.la
 
 libgegl_sc_@GEGL_API_VERSION@_la_LIBADD = \
-	$(libgegl)
+	$(libgegl) $(BABL_LIBS)
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = gegl-sc-$(GEGL_API_VERSION).pc
