Add all gegl include paths to AM_CPPFLAGS
Necessary to move declarations into their own headers.

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -11,12 +11,18 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir)/gegl \
 	-I$(top_builddir)/gegl/buffer \
 	-I$(top_srcdir)/gegl/buffer \
+	-I$(top_builddir)/gegl/graph \
+	-I$(top_srcdir)/gegl/graph \
 	-I$(top_builddir)/gegl/module \
 	-I$(top_srcdir)/gegl/module \
-	-I$(top_builddir)/gegl/property-types \
-	-I$(top_srcdir)/gegl/property-types \
+	-I$(top_builddir)/gegl/operation \
+	-I$(top_srcdir)/gegl/operation \
 	-I$(top_builddir)/gegl/opencl \
-	-I$(top_srcdir)/gegl/opencl
+	-I$(top_srcdir)/gegl/opencl \
+	-I$(top_builddir)/gegl/process \
+	-I$(top_srcdir)/gegl/process \
+	-I$(top_builddir)/gegl/property-types \
+	-I$(top_srcdir)/gegl/property-types
 
 AM_CFLAGS = $(DEP_CFLAGS) $(BABL_CFLAGS)
 
