tests: Add test for gegl_object_set/get_has_forked

--- a/tests/simple/.gitignore
+++ b/tests/simple/.gitignore
@@ -14,6 +14,7 @@
 /test-image-compare
 /test-misc
 /test-node-properties
+/test-object-forked
 /test-opencl-colors
 /test-path
 /test-proxynop-processing
