tests: Add test case for license filter

--- a/tests/simple/.gitignore
+++ b/tests/simple/.gitignore
@@ -13,6 +13,7 @@
 /test-gegl-rectangle
 /test-gegl-tile
 /test-image-compare
+/test-license-check
 /test-misc
 /test-node-connections
 /test-node-properties
