texturize-canvas: Ported apply-canvas operation from GIMP.

--- a/operations/common/Makefile.am
+++ b/operations/common/Makefile.am
@@ -104,6 +104,7 @@ op_LTLIBRARIES = \
 	svg-luminancetoalpha.la \
 	svg-matrix.la \
 	svg-saturate.la \
+	texturize-canvas.la \
 	threshold.la \
 	tile-seamless.la \
 	tile.la \
