--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -97,6 +97,7 @@ operations/common/svg-huerotate.c
 operations/common/svg-luminancetoalpha.c
 operations/common/svg-matrix.c
 operations/common/svg-saturate.c
+operations/common/texturize-canvas.c
 operations/common/threshold.c
 operations/common/tile.c
 operations/common/tile-seamless.c
