linear-gradient: Clean up and move out of workshop

--- a/operations/common/Makefile.am
+++ b/operations/common/Makefile.am
@@ -54,6 +54,7 @@ op_LTLIBRARIES = \
 	layer.la \
 	lens-distortion.la \
 	levels.la \
+	linear-gradient.la \
 	load.la \
 	magick-load.la \
 	mantiuk06.la \
