radial-gradient: Clean up and move out of workshop

--- a/operations/common/Makefile.am
+++ b/operations/common/Makefile.am
@@ -87,6 +87,7 @@ op_LTLIBRARIES = \
 	polar-coordinates.la \
 	posterize.la \
 	raw-load.la \
+	radial-gradient.la \
 	rectangle.la \
 	red-eye-removal.la \
 	reinhard05.la \
