tests: Add test case for node reconnect
Not a great test case because gegl_node_get_producer()
has some magic in it that may cause trouble.

--- a/tests/simple/.gitignore
+++ b/tests/simple/.gitignore
@@ -14,6 +14,7 @@
 /test-gegl-tile
 /test-image-compare
 /test-misc
+/test-node-connections
 /test-node-properties
 /test-object-forked
 /test-opencl-colors
