Fix enum string generation
Should be "ENUM_NAME" "enum_nick" not "enum_nick" "enum_nick".

--- a/gegl/Makefile.am
+++ b/gegl/Makefile.am
@@ -181,7 +181,7 @@ gegl-enums.c: $(srcdir)/gegl-enums.h
 		--fhead "/* This is a generated file, do not edit directly */\n\n#include \"config.h\"\n#include <glib-object.h>\n#include \"gegl-enums.h\"" \
 		--fprod "\n/* enumerations from \"@filename@\" */" \
 		--vhead "GType\n@enum_name@_get_type (void)\n{\n  static GType etype = 0;\n  if (etype == 0) {\n    static const G@Type@Value values[] = {" \
-		--vprod "      { @VALUENAME@, \"@valuenick@\", \"@valuenick@\" }," \
+		--vprod "      { @VALUENAME@, \"@VALUENAME@\", \"@valuenick@\" }," \
 		--vtail "      { 0, NULL, NULL }\n    };\n    etype = g_@type@_register_static (\"@EnumName@\", values);\n  }\n  return etype;\n}\n\n" \
 		$(srcdir)/gegl-enums.h > xgen-tec \
 	&& cp xgen-tec $(@F) \
