tests: Add test case for shared empty tile

--- a/tests/simple/.gitignore
+++ b/tests/simple/.gitignore
@@ -9,6 +9,7 @@
 /test-change-processor-rect
 /test-color-op
 /test-convert-format
+/test-empty-tile
 /test-exp-combine.sh
 /test-gegl-rectangle
 /test-gegl-tile
