operations: add a cell noise operation
Added a cell noise operation implementing the texture function described in

    Steven Worley. 1996. A cellular texture basis function.
    In Proceedings of the 23rd annual conference on Computer
    graphics and interactive techniques (SIGGRAPH '96).

--- a/operations/common/Makefile.am
+++ b/operations/common/Makefile.am
@@ -77,6 +77,7 @@ op_LTLIBRARIES = \
 	noise-rgb.la \
 	noise-slur.la \
 	noise-spread.la \
+	noise-cell.la \
 	noise.la \
 	oilify.la \
 	opacity.la \
