gnomonic-projection: add panorama VR rendering op
Added an operations that performs a gnomonic / equilinear projection of a
equirectangular input image. (Renders virtual camera images from a panorama.).

--- a/operations/common/Makefile.am
+++ b/operations/common/Makefile.am
@@ -45,6 +45,7 @@ op_LTLIBRARIES = \
 	gaussian-blur.la \
 	gegl-buffer-load-op.la \
 	gegl-buffer-save-op.la \
+	gnomonic-projection.la \
 	grey.la \
 	grid.la \
 	high-pass.la \
