operations: add a simplex noise operation
Added a simplex noise operation implementing the noise function
originally presented by Ken Perlin during a SIGGRAPH 2002 course and
further explained in the paper "Simplex noise demystified" by Stefan

implemented by Dimitris Papavasiliou <dpapavas@gmail.com>

--- a/operations/common/Makefile.am
+++ b/operations/common/Makefile.am
@@ -75,6 +75,7 @@ op_LTLIBRARIES = \
 	noise-pick.la \
 	noise-reduction.la \
 	noise-rgb.la \
+	noise-simplex.la \
 	noise-slur.la \
 	noise-spread.la \
 	noise-cell.la \
