--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -204,6 +204,7 @@ operations/workshop/generated/negation.c
 operations/workshop/generated/soft-burn.c
 operations/workshop/generated/soft-dodge.c
 operations/workshop/generated/subtractive.c
+operations/workshop/gradient-map.c
 operations/workshop/hstack.c
 operations/workshop/ink-simulator.c
 operations/workshop/kuwahara.c
