gegl: make enum value names to be human-readable, translatable strings
Don't generate gegl-enums.c with glib-mkenums. Instead manually
maintain it and add the same translation logic as in gegl-op.h

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,6 +1,7 @@
 [encoding: UTF-8]
 bin/gegl.c
 bin/gegl-options.c
+gegl/gegl-enums.c
 gegl/gegl-init.c
 gegl/module/geglmodule.c
 operations/common/alien-map.c
