operations: move convolution-matrix from workshop/ to common/

--- a/operations/common/Makefile.am
+++ b/operations/common/Makefile.am
@@ -29,6 +29,7 @@ op_LTLIBRARIES = \
 	color-to-alpha.la \
 	color.la \
 	contrast-curve.la \
+	convolution-matrix.la \
 	cubism.la \
 	deinterlace.la \
 	difference-of-gaussians.la \
