operations: move color-rotate from workshop/ to common/

--- a/operations/common/Makefile.am
+++ b/operations/common/Makefile.am
@@ -25,6 +25,7 @@ op_LTLIBRARIES = \
 	channel-mixer.la \
 	checkerboard.la \
 	color-reduction.la \
+	color-rotate.la \
 	color-temperature.la \
 	color-to-alpha.la \
 	color.la \
