operations: add gegl:copy-buffer which allows to take snapshots
of a graph at any point. It works like gegl:write-buffer but is a
filter that outputs its input unchanged.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -25,6 +25,7 @@ operations/common/color-temperature.c
 operations/common/color-to-alpha.c
 operations/common/contrast-curve.c
 operations/common/convolution-matrix.c
+operations/common/copy-buffer.c
 operations/common/cubism.c
 operations/common/deinterlace.c
 operations/common/difference-of-gaussians.c
