perf: update performance testing framework

--- a/configure.ac
+++ b/configure.ac
@@ -1202,6 +1202,7 @@ tests/python/Makefile
 tests/simple/Makefile
 tests/xml/Makefile
 tests/xml/data/Makefile
+perf/Makefile
 po/Makefile.in
 gegl-uninstalled.pc
 opencl/Makefile
