buffer: re-enable 1px shortcut

--- a/perf/Makefile-retrospect
+++ b/perf/Makefile-retrospect
@@ -21,8 +21,8 @@ retry:
 
 prepare:
 	# uncomment these to make sure cpu is in high performance mode
-	#sudo sh -c 'echo performance > /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor || true'
-	#sudo sh -c 'echo performance > /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor || true'
+	sudo sh -c 'echo performance > /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor || true'
+	sudo sh -c 'echo performance > /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor || true'
 
 reset:
 	rm -rf jobs jobs
