--- a/perf/.gitignore
+++ b/perf/.gitignore
@@ -1,10 +1,16 @@
-report.png
-report.pdf
-build
-tests/bblur
-tests/bcontrast-minichunk
-tests/blur
-tests/comp
-tests/passthrough
-tests/rotate
-tests/unsharpmask
+/.deps
+/.libs
+/*.o
+/Makefile
+/Makefile.in
+/report.png
+/report.pdf
+/test-bcontrast
+/test-bcontrast-4x
+/test-bcontrast-megachunk
+/test-bcontrast-minichunk
+/test-blur
+/test-gegl-buffer-access
+/test-passthrough
+/test-rotate
+/test-unsharpmask
